--- a/sigmaCabs/app/views/bookings/bookingForm.html
+++ b/sigmaCabs/app/views/bookings/bookingForm.html
@@ -24,7 +24,7 @@
     </div>
     <div class="fieldContainer  relative right">
         <button class="left btnCompact btn-success" style="border-radius: 5px; margin:0px;" ng-click = "checkVehicleAvilabilty()">Vehicle Availability</button>
-        <button class="left btnCompact btn-success" style="border-radius: 5px;" ng-click = "checkMultiVehicle()">Multi Vehicle</button>
+        <button class="left btnCompact btn-grey" style="border-radius: 5px;" ng-click = "checkMultiVehicle()">Multi Vehicle</button>
     </div>
     <div class="fieldContainer  relative left">
         <label class="labelCompact">Drop</label>
