--- a/sigmaCabs/app/views/bookings/singleTariff.html
+++ b/sigmaCabs/app/views/bookings/singleTariff.html
@@ -60,58 +60,56 @@
                     <div>
 
                     <div class="tariffFieldContainer margin-top10">
-                        <div class=" left margin-right50">
+                        <div class="left-column">
                             <label class="labelCompact" title="Package Duration">Pkg. Duration</label>
                             <div class ="left" data-ng-bind="roData.duration"></div>
                         </div>
-                        <div class=" left">
+                        <div class="right-column">
                             <label class="labelCompact" title="Package KM">Pkg. KM</label>
                             <div class ="left" data-ng-bind="roData.km"></div>
                         </div>
                         <p class="clear"/>
-                        <div class=" left margin-right50">
+                        <div class="left-column">
                             <label class="labelCompact" title="Package Amount">Pkg. Amount</label>
                             <div class ="left" data-ng-bind="roData.amount"></div>
                         </div>
-                        <div class=" left">
+                        <div class="right-column">
                             <label class="labelCompact" title="Extra KM charge">Ext. KM Chrg.</label>
                             <div class ="left" data-ng-bind="roData.extraKmCharge"></div>
                         </div>
                         <p class="clear"/>
-                        <div class=" left margin-right50">
+                        <div class="left-column">
                             <label class="labelCompact" title="Grace Time">Grace Time</label>
                             <div class ="left" data-ng-bind="roData.graceTime"></div>
                         </div>
-                        <div class=" left">
+                        <div class="right-column">
                             <label class="labelCompact" title="Extra Charge">Ext. Chrg.</label>
                             <div class ="left" data-ng-bind="roData.extraCharges"></div>
                         </div>
                         <p class="clear"/>
-                        <div class=" left margin-right50">
+                        <div class="left-column">
                             <label class="labelCompact" title="Extra Hour Charge">Ext. hr Chrg.</label>
                             <div class ="left" data-ng-bind="roData.extraHourCharge"></div>
                         </div>
-                        <div class=" left">
+                        <div class="right-column">
                             <label class="labelCompact">Discount</label>
                             <div class ="left" data-ng-bind="roData.discount"></div>
                         </div>
                         <p class="clear"/>
+                        <div class="left-column">
+                            <label class="labelCompact">Cust. Grade</label>
+                            <div class ="left" data-ng-bind="roData.customerGrade"></div>
+                        </div> 
+                        <div class="right-column">
+                            <label class="labelCompact" title="Cust. Category">Cust. Catg.</label>
+                            <div class ="left" data-ng-bind="roData.customerCategory"></div>
+                        </div> 
+                        <p class="clear" />
                         <div>
-                            <div class=" left">
-                                <label class="labelCompact">Cust. Grade</label>
-                                <div class ="left" data-ng-bind="roData.customerGrade"></div>
-                            </div> 
-                            <div class=" left">
-                                <label class="labelCompact">Cust. Category</label>
-                                <div class ="left" data-ng-bind="roData.customerCategory"></div>
-                            </div> 
-                            <p class="clear" />                           
-                        </div>
-                        <p class="clear"/>
-                        <div class=" left">
                             <label class="labelCompact">Comments</label>
                             <div class ="left" data-ng-bind="roData.comments"></div>
-                        </div> 
+                        </div>
+                        <p class="clear" />
                     </div>
 
                 </fieldset>    
