--- a/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
+++ b/sigmaCabs/app/views/dispatches/changeVehiclePhone.html
@@ -20,7 +20,7 @@
 
                 <div class="fieldContainer  relative">
                     <label class="labelCompact">New Phone No.</label>
-                    <input type="text" ng-model="newMobile" maxlength="15" class=" textFieldCompact" />
+                    <input type="text" ng-model="newMobile" maxlength="15" class=" textFieldCompact" phone/>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
                     <label class="labelCompact">Comments</label>
