--- a/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleAllotForm.html
@@ -65,10 +65,11 @@
     <hr class="buttonSpliter" />
     <div class="mainButtonContainer">
         <div style="text-align: center;">
-            <button class="btnCompact btn-success" data-ng-click="fnVehicleConfirm()" data-ng-show="bVehConfirmShow">Confirmed</button>
+            <!-- <button class="btnCompact btn-success" data-ng-click="fnVehicleConfirm()" data-ng-show="bVehConfirmShow">Confirmed</button> -->
+            <button class="btnCompact btn-success" data-ng-click="fnVehicleBookingCancel()" data-ng-show="bVehCancelShow">Cancel</button>
             <button class="btnCompact btn-success" data-ng-click="fnVehicleBookingStart()">Start Report</button>
             <button class="btnCompact btn-success" data-ng-click="fnVehicleBookingClose()">Closing Report</button>
-            <button class="btnCompact btn-success" data-ng-click="fnVehicleBookingComplaint()">Complaints</button>
+            <!-- <button class="btnCompact btn-success" data-ng-click="fnVehicleBookingComplaint()">Complaints</button> -->
             <button class="btnCompact btn-success">Change Tariff</button>
             <button class="btnCompact btn-success">Change Vehicle</button>
             <button class="btnCompact btn-success">Change Pickup Location</button>
