--- a/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
+++ b/sigmaCabs/app/views/dispatches/vehicleBookingStart.html
@@ -19,7 +19,7 @@
                 <legend class="searchbox-border">Start Report</legend>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Actual Kms</label>
-                    <span>1511</span>
+                    <span>{{vehicleDetails.actualKms}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Current Kms</label>
@@ -27,7 +27,7 @@
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Dead Mileage</label>
-                    <span>12</span>
+                    <span>{{bookingStart.deadMileage}}</span>
                 </div>
                 <div class="fieldContainer relative">
                     <label class="labelCompact">Rating</label>
@@ -35,11 +35,11 @@
                 </div>
                 <div class="fieldContainer  relative">
                     <label class="labelCompact">Reason</label><!--  ng-model="" -->
-                    <select class="validate[maxSize[36]] selectFieldCompact"></select>
+                    <select class="validate[maxSize[36]] selectFieldCompact" data-ng-model="bookingStart.reasonId" data-ng-options="obj.id as obj.description for obj in vehicleReasonTypes"></select>
                 </div>
                 <div class="fieldContainer  relative" style="height:75px;">
                     <label class="labelCompact">Comments</label>
-                    <textarea data-ng-model="comments" class="cancelBookingComment"></textarea>
+                    <textarea data-ng-model="bookingStart.comments" class="cancelBookingComment"></textarea>
                 </div>
             </fieldset>
             <p class="clear"/>
