--- a/sigmaCabs/app/views/dispatches/currentMonthData.html
+++ b/sigmaCabs/app/views/dispatches/currentMonthData.html
@@ -1,6 +1,6 @@
-<fieldset class="left" style="width:50%;margin-right: 7px;height: 220px;">
+<fieldset class="left" style="width:52.6%;margin-right: 7px;height: 220px;">
     <legend class="searchbox-border">Current Date Bookings</legend>
-    <div style="height:180px;margin-right: 10px;width:68%;" id="customerBookingGridID" class="bookingHistoryGrid left">
+    <div style="height:180px;margin-right: 20px;width:68%;" id="customerBookingGridID" class="bookingHistoryGrid left">
     	<div style="margin-bottom:5px;">
     		<span><strong>LT:&nbsp;</strong></span>
     		<span class="margin-right10"><strong>10:30:25</strong></span>
@@ -16,7 +16,7 @@
     	</div>
     	<div class="gridStyle" ng-grid="gridCurrentMonthData" style="min-height:160px;"></div>
     </div>
-    <div style="width:30%;" class="left">
+    <div style="width:28%;margin-top: 20px;" class="left">
     	<div class="fieldContainer relative clearBoth">
     		<span title="Total Booking"><strong>TB:&nbsp;</strong></span>
     		<span class="margin-right10"><strong>4</strong></span>
@@ -47,7 +47,7 @@
     </div>
     <p class="clear" />
 </fieldset>
-<fieldset class="left" style="width:49.4%">
+<fieldset class="left" style="width:46.7%">
     <legend class="searchbox-border">Current Month History</legend>
     <div style="min-height: 200px;">
     	<chart  value='{{assetStateChartData}}' type="pie" id="stateChart" height="200" width="200"></chart>
