--- a/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
+++ b/sigmaCabs/app/views/dispatches/vehicleInformationForm.html
@@ -43,7 +43,7 @@
                     <li><a href="javascript:void(0);" data-ng-click="fnChangeVehicleStatus()">Vehcile Status Change</a></li>
                     <li><a href="javascript:void(0);" data-ng-click="">Road Side Booking</a></li>
                     <li class="divider"></li>
-                    <li><a href="javascript:void(0);" data-ng-click="">Vehicle Breakdown</a></li>
+                    <li><a href="javascript:void(0);" data-ng-click="fnVehicleBreakdown()">Vehicle Breakdown</a></li>
                 </ul>
             </div>
             <!-- <button class="right btnCompact btn-success" data-ng-click="fnOpenDispatcherAddRequest();"></button> -->
